--- a/movs_classification_2023.ipynb
+++ b/movs_classification_2023.ipynb
@@ -17,10 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "8dfa32ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# pip freeze > requirements.txt"
    ]
@@ -36,10 +44,15 @@
     "import os\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import tqdm\n",
     "\n",
     "\n",
     "from PIL import Image\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from torchvision import transforms"
    ]
   },
   {
@@ -242,7 +255,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "b6c4eb05",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -269,6 +284,114 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "1fec938c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Осталось загрузить: 55219 картинки\n",
+      "Осталось загрузить: 50219 картинки\n",
+      "Осталось загрузить: 45219 картинки\n",
+      "Осталось загрузить: 40219 картинки\n",
+      "Осталось загрузить: 35219 картинки\n",
+      "Осталось загрузить: 30219 картинки\n",
+      "Осталось загрузить: 25219 картинки\n",
+      "Осталось загрузить: 20219 картинки\n",
+      "Осталось загрузить: 15219 картинки\n",
+      "Осталось загрузить: 10219 картинки\n",
+      "Осталось загрузить: 5219 картинки\n",
+      "Осталось загрузить: 219 картинки\n",
+      "CPU times: total: 14min 24s\n",
+      "Wall time: 5min 25s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# поиск среднего и стандартного отклонения набора данных изображений\n",
+    "\n",
+    "# перевод изображения в тензор\n",
+    "transform = transforms.Compose([\n",
+    "transforms.ToTensor()])\n",
+    "\n",
+    "# для подсчета\n",
+    "total_sum = torch.tensor([0.0, 0.0, 0.0])\n",
+    "total_sum_square = torch.tensor([0.0, 0.0, 0.0])\n",
+    "\n",
+    "for i in data.index:\n",
+    "    \n",
+    "    # перебор картинок\n",
+    "    tensor_image = transform(Image.open(data['path_to_image'][i]))\n",
+    "    \n",
+    "    #складываем RGB\n",
+    "    total_sum += tensor_image.sum(axis = [0,1,2])\n",
+    "    total_sum_square += (tensor_image ** 2).sum(axis = [0,1,2])\n",
+    "    \n",
+    "    if i % 5000 == 0:\n",
+    "        print(f'Осталось загрузить: {len(data) - i} картинки')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3ac87196",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([3.3906e+10, 3.3906e+10, 3.3906e+10]),\n",
+       " tensor([2.0858e+10, 2.0858e+10, 2.0858e+10]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# проверка значений\n",
+    "total_sum, total_sum_square"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a97fb8ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean: tensor([0.6140, 0.6140, 0.6140])\n",
+      "std:  tensor([0.0262, 0.0262, 0.0262])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# len(df) = Number of images in dataset (df)\n",
+    "count = len(data) * 1000 * 1000\n",
+    "\n",
+    "# mean and std\n",
+    "total_mean = total_sum / count\n",
+    "total_var  = (total_sum_square / count) - (total_mean ** 2)\n",
+    "total_std  = torch.sqrt(total_var)\n",
+    "\n",
+    "# output\n",
+    "print('mean: '  + str(total_mean))\n",
+    "print('std:  '  + str(total_std))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "d52e98a3",
    "metadata": {},
    "outputs": [
@@ -379,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "1c06e5f4",
    "metadata": {},
    "outputs": [],
@@ -392,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "168b5975",
    "metadata": {},
    "outputs": [
@@ -534,7 +657,7 @@
        "Caterpillar                   564"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "db51e04c",
    "metadata": {},
    "outputs": [
@@ -578,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "45b18a2f",
    "metadata": {},
    "outputs": [],
@@ -603,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "e5f10a4c",
    "metadata": {},
    "outputs": [
@@ -622,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "e8fe6cca",
    "metadata": {},
    "outputs": [],
@@ -637,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "d5cc1d82",
    "metadata": {},
    "outputs": [
@@ -729,7 +852,7 @@
        "Elephant                     1143"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "ba9d9e22",
    "metadata": {},
    "outputs": [
@@ -832,7 +955,7 @@
        "Elephant                      491"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
