--- a/clip_zeroshot.ipynb
+++ b/clip_zeroshot.ipynb
@@ -5,12 +5,119 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "! pip install git+https://github.com/openai/CLIP.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bear', 'Brown bear', 'Bull', 'Camel', 'Canary', 'Cat', 'Caterpillar', 'Cattle', 'Centipede', 'Cheetah', 'Chicken', 'Crab', 'Crocodile', 'Deer', 'Dog', 'Duck', 'Eagle', 'Elephant', 'Fish', 'Fox', 'Frog', 'Giraffe', 'Goat', 'Goldfish', 'Goose', 'Hamster', 'Harbor seal', 'Hedgehog', 'Hippopotamus', 'Horse', 'Jaguar', 'Jellyfish', 'Kangaroo', 'Koala', 'Ladybug', 'Leopard', 'Lion', 'Lizard', 'Lynx', 'Magpie', 'Monkey', 'Moths and butterflies', 'Mouse', 'Mule', 'Ostrich', 'Otter', 'Owl', 'Panda', 'Parrot', 'Penguin', 'Pig', 'Polar bear', 'Rabbit', 'Raccoon', 'Raven', 'Red panda', 'Rhinoceros', 'Scorpion', 'Sea lion', 'Sea turtle', 'Seahorse', 'Shark', 'Sheep', 'Shrimp', 'Snail', 'Snake', 'Sparrow', 'Spider', 'Squid', 'Squirrel', 'Starfish', 'Swan', 'Tick', 'Tiger', 'Tortoise', 'Turkey', 'Turtle', 'Whale', 'Woodpecker', 'Worm', 'Zebra']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read categories\n",
+    "import os\n",
+    "#os.chdir('/movs_classification_2023/')\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "with open('class_to_idx.json', 'r') as f:\n",
+    "    class_to_idx = json.load(f)\n",
+    "\n",
+    "cat_names = list(class_to_idx.keys())\n",
+    "print(cat_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kolyangg/Project/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import clip\n",
+    "from PIL import Image\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model, preprocess = clip.load(\"ViT-B/32\", device=device)\n",
+    "\n",
+    "\n",
+    "categories = cat_names\n",
+    "\n",
+    "# Preprocess the category names into a format suitable for CLIP\n",
+    "category_texts = clip.tokenize(categories).to(device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The image is classified as: Camel\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load and preprocess your image\n",
+    "image_path = \"sample/4.jpg\"\n",
+    "image = preprocess(Image.open(image_path)).unsqueeze(0).to(device)\n",
+    "\n",
+    "# Encode the image and the category texts\n",
+    "with torch.no_grad():\n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(category_texts)\n",
+    "\n",
+    "# Compute the similarity between the image and each category\n",
+    "image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "similarities = (100.0 * image_features @ text_features.T).softmax(dim=-1)\n",
+    "\n",
+    "# Find the category with the highest similarity score\n",
+    "best_category_index = similarities.argmax(dim=-1).item()\n",
+    "best_category = categories[best_category_index]\n",
+    "\n",
+    "print(f\"The image is classified as: {best_category}\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
