--- a/clip_zeroshot.ipynb
+++ b/clip_zeroshot.ipynb
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "# Load and preprocess your image\n",
+    "# Load and preprocess  image\n",
     "image_path = \"sample/4.jpg\"\n",
     "image = preprocess(Image.open(image_path)).unsqueeze(0).to(device)\n",
     "\n",
@@ -98,6 +98,113 @@
     "best_category = categories[best_category_index]\n",
     "\n",
     "print(f\"The image is classified as: {best_category}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# top 5 categories CLIP\n",
+    "\n",
+    "def get_categories_clip(new_image_path):\n",
+    "    import pandas as pd\n",
+    "    from PIL import Image\n",
+    "    import clip\n",
+    "    import json\n",
+    "\n",
+    "    import torch\n",
+    "    from torchvision import transforms\n",
+    "    import torchvision.models as models\n",
+    "    import torch.nn as nn\n",
+    "    import torch.nn.functional as F\n",
+    "    \n",
+    "    # Check if GPU is available\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    print(f\"Using device: {device}\")\n",
+    "    \n",
+    "    # Load CLIP model\n",
+    "    model, preprocess = clip.load(\"ViT-B/32\", device)\n",
+    "    \n",
+    "    # Load cat names\n",
+    "    with open('class_to_idx.json', 'r') as f:\n",
+    "        class_to_idx = json.load(f)\n",
+    "\n",
+    "    # Get and preprocess cat names into a format suitable for CLIP\n",
+    "    cat_names = list(class_to_idx.keys())\n",
+    "    categories = cat_names    \n",
+    "    category_texts = clip.tokenize(categories).to(device)\n",
+    "\n",
+    "    # Load image\n",
+    "    image_path = new_image_path  # test image path\n",
+    "    image = preprocess(Image.open(image_path)).unsqueeze(0).to(device)\n",
+    "\n",
+    "    # Encode the image and the category texts\n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(category_texts)\n",
+    "\n",
+    "    # Compute the similarity between the image and each category\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "    similarities = (100.0 * image_features @ text_features.T).softmax(dim=-1)\n",
+    "\n",
+    "    # Get the top 5 categories and their probabilities\n",
+    "    top_num = 5\n",
+    "    top_prob, top_catid = torch.topk(similarities, top_num)\n",
+    "\n",
+    "    # Convert to Python data types\n",
+    "    top_prob = top_prob.cpu().numpy()[0]\n",
+    "    top_catid = top_catid.cpu().numpy()[0]\n",
+    "\n",
+    "    # Map indices to class names and prepare predictions\n",
+    "    predictions = []\n",
+    "    for i in range(top_num):\n",
+    "        predicted_class_name = categories[top_catid[i]]\n",
+    "        predicted_probability = top_prob[i]\n",
+    "        predictions.append({'Category ID': predicted_class_name,\n",
+    "                            'Probability': predicted_probability})\n",
+    "\n",
+    "    df = pd.DataFrame(predictions)\n",
+    "    df_string = df.to_string(index=False)\n",
+    "    print(df_string)\n",
+    "\n",
+    "    return df_string  # return df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n",
+      "Category ID  Probability\n",
+      "    Chicken     0.958496\n",
+      "     Turkey     0.011513\n",
+      "       Duck     0.005699\n",
+      "     Canary     0.004105\n",
+      "     Parrot     0.003298\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Category ID  Probability\\n    Chicken     0.958496\\n     Turkey     0.011513\\n       Duck     0.005699\\n     Canary     0.004105\\n     Parrot     0.003298'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_categories_clip('sample/5.jpg')"
    ]
   }
  ],
