--- a/clip_zeroshot.ipynb
+++ b/clip_zeroshot.ipynb
@@ -197,6 +197,71 @@
    "source": [
     "get_categories_clip('sample/5.jpg')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected model: CLIP (zero-shot). Starting testing\n",
+      "Using 32 workers for data loading\n",
+      "Using cuda\n",
+      "Using device: cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing: 100%|██████████| 346/346 [00:10<00:00, 32.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.806483745359051\n",
+      "Precision: 0.8725240529868838\n",
+      "Recall: 0.806483745359051\n",
+      "F1 Score: 0.8252605390772069\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.806483745359051,\n",
+       " 'precision': 0.8725240529868838,\n",
+       " 'recall': 0.806483745359051,\n",
+       " 'f1': 0.8252605390772069}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Testing CLIP model\n",
+    "from utils.clip import test_clip\n",
+    "from utils.vit import prepare_data_vit\n",
+    "\n",
+    "\n",
+    "image_folder_path='Data_small'\n",
+    "\n",
+    "print('Selected model: CLIP (zero-shot). Starting testing')\n",
+    "device, no_of_classes, train_loader, test_loader, dataloader = \\\n",
+    "    prepare_data_vit(image_folder_path) # CLIP uses the same approach as VIT (so it's okay)\n",
+    "# Load cat names\n",
+    "class_to_idx_path = 'class_to_idx.json'\n",
+    "\n",
+    "metrics_dict = test_clip(class_to_idx_path, test_loader)\n",
+    "metrics_dict\n",
+    "        \n"
+   ]
   }
  ],
  "metadata": {
